# pqc-final

./: .gitignore  CMakeLists.txt
cmake/: TC-aarch64.cmake
experiments/: test2.sage
include/: mult.h  pretty.h  sntrup761.h
include/arith_tmpl/: arith.h  gen_const.h  neon_arith.h  neon_arith_opaque.h  reduce_tbl.h
include/neon/: base_mul.h  intt_10_x10.h  intt_9_x9.h  mult_low.h  neon.h  ntt_10.h  ntt_9.h
include/rader_outer/: base_mul.h  intt_17.h  intt_3_2.h  ntt_17.h  ntt_3_2.h  polymul.h
include/utils/: pretty.h
poc/: poc.c
profiling/: CMakeLists.txt
profiling/neon/: CMakeLists.txt  base_mul_profile.cpp  forward_profile.cpp  intt_10_x10_profile.cpp  intt_9_x9_profile.cpp  mult_once.cpp  mult_profile.cpp  ntt_10_profile.cpp  ntt_9_profile.cpp
profiling/rader_outer/: CMakeLists.txt  base_mul_profile.c  intt_17_profile.c  intt_3_2_profile.c  ntt_17_profile.c  ntt_3_2_profile.c  polymul_once.c  polymul_profile.c
sage_ref/: sage_ref.sage
scripts/: gen.fish  gen.py  test.fish
scripts/experiments/: test.sage
scripts/sage_ref/: main.sage  ref.sage
src/: CMakeLists.txt
src/neon/: base_mul.cpp  intt_10_x10.cpp  intt_9_x9.cpp  mult_low.cpp  neon.cpp  ntt_10.cpp  ntt_9.cpp
src/poc/: poc.cpp
src/rader_outer/: base_mul.c  intt_17.c  intt_3_2.c  mul.S  ntt_17.c  ntt_3_2.c  polymul.c  rader.S  radix3.S
test/: CMakeLists.txt  base_mul_profile.cpp  center_poly_profile.cpp  crt_profile.cpp  div90_profile.cpp  intt_10_x10_profile.cpp  intt_9_x9_profile.cpp  mult_low_profile.cpp  mult_profile.cpp  mult_test.cpp  mult_test_small.cpp  ntt_9_profile.cpp  polymul_test.c  polymul_test_small.c
testcases/: 1.in  1.out  10.in  10.out  2.in  2.out  3.in  3.out  4.in  4.out  5.in  5.out  6.in  6.out  7.in  7.out  8.in  8.out  9.in  9.out
two_poly_ring_simple_c/: main.c
